# kiran-calendar

./: .gitlab-ci.yml  README.en.md  README.md  meson.build  meson_options.txt
data/: com.kylinsec.kiran.calendar.gschema.xml.in  com.unikylin.Kiran.kiran-calendar.gschema.xml.in  kiran-calendar.css  meson.build  org.kiran.panel.applet.KiranClockAppletFactory.service.in  org.mate.panel.KiranClockApplet.mate-panel-applet.in.in  org.mate.panel.applet.KiranClockAppletFactory.service.in
po/: LINGUAS  POTFILES.in  bo_CN.po  kk_KG.po  kk_KZ.po  mn_MN.po  ug_CN.po  zh_CN.po
src/: common.c  common.h  kiran-calendar-test.c  kiran-calendar-window.c  kiran-calendar-window.h  kiran-calendar.c  kiran-calendar.h  kiran-clock-applet.c  kiran-clock-test.c  kiran-clock.c  kiran-clock.h  meson.build
